# rust-fmt

./: .gitignore  .vscodeignore  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
rust-fmt-mf/: Cargo.toml
rust-fmt-mf/src/: formatter.rs  lib.rs  main.rs  mapper.rs  parser.rs  replacer.rs  shadow.rs  tests.rs  types.rs
rust-fmt-mf/tests/: integration.rs  run_fixtures.py  test_one.py
rust-fmt-mf/tests/fixtures/: async_block_inline.expected  async_body.expected  async_body.rs  attr_pat.expected  attr_pat.rs  bracket_arm_pattern.expected  bracket_arm_pattern.rs  bracket_pattern.expected  bracket_pattern.rs  closure_move.expected  closure_move.rs  comments.expected  complex_pattern.expected  complex_pattern.rs  const_static.expected  const_static.rs  define_enum_invocation.expected  define_enum_invocation.rs  derive_builder_with_state.expected  derive_builder_with_state.rs  dispatch.expected  dispatch.rs  dollar_crate.expected  dollar_crate.rs  dollar_dollar.expected  double_brace.expected  double_brace.rs  empty_body.expected  empty_body.rs  extern_c.expected  extern_c.rs  field_accessor.expected  field_accessor.rs  field_accessor_invocation.expected  field_accessor_invocation.rs  for_loop_body.expected  for_loop_body.rs  huge_macro.expected  if_let_else.expected  impl_display.rs  (+62 more)
rust-fmt-mf/tmp_diff/: big_mess.rs  complex_types.rs  lib.rs  macro_edge_cases.rs  macro_heavy.rs  main.rs  main_fmt.rs  mod.rs
scripts/: build_current.py  build_rust_fmt_mf.py
src/: controlCenter.ts  defaultFormatter.ts  extension.ts  formatter.ts  gitSelection.ts
(+12 files in other folders)
