[package]
name = "rust-fmt-mf"
version = "0.1.0"
edition = "2021"
description = "Native macro_rules! body formatter for rust-fmt VS Code extension"

[lib]
name = "rust_fmt_mf"
path = "src/lib.rs"

[[bin]]
name = "rust-fmt-mf"
path = "src/main.rs"

[dependencies]
syn = { version = "2", features = ["full", "parsing", "printing", "extra-traits"] }
proc-macro2 = "1"
quote = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
